force-app/main/default/objects/Order_Item__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Event_Participation__c)), TEXT(Event_Participation__r.Contact__r.Salutation) + &apos; &apos; + Event_Participation__r.Contact__r.FirstName + &apos; &apos; + Event_Participation__r.Contact__r.LastName, 
IF(NOT(ISBLANK(Session_Participation__c)), TEXT(Session_Participation__r.Contact__r.Salutation) + &apos; &apos; + Session_Participation__r.Contact__r.LastName, 
TEXT(Order_Custom__r.Contact__r.Salutation) + &apos; &apos; + Order_Custom__r.Contact__r.FirstName + &apos; &apos; + Order_Custom__r.Contact__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>