force-app/main/default/objects/Order_Item__c/fields/Event_Participation__c.field-meta.xml
<CustomField>
    <fullName>Event_Participation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Participation</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>