force-app/main/default/objects/Order_Item__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Event_Participation__c)), Event_Participation__r.Event_Ticket__r.Ticket__r.Name,
IF(NOT(ISBLANK(Session_Participation__c)), Session_Participation__r.Session__r.Name,
IF(NOT(ISBLANK(Membership__c)), Membership__r.Name,
IF(NOT(ISBLANK(Product__c)), Product__r.Name , &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>