force-app/main/default/objects/Order_Item__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <formula>ISPICKVAL(Order_Custom__r.Status__c, &quot;Paid&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>