force-app/main/default/objects/Order_Item__c/fields/Product_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Text__c</fullName>
    <description>Thsi formula displays the product lookup field as text to be used in a rollup summary field filter.</description>
    <formula>Product__c</formula>
    <label>Product Text</label>
    <type>Text</type>
</CustomField>