force-app/main/default/objects/Order_Item__c/fields/Refund_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Refund_Invoice__c</fullName>
    <label>Refund Invoice</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>