force-app/main/default/objects/Order_Item__c/fields/Service_Selection__c.field-meta.xml
<CustomField>
    <fullName>Service_Selection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Selection</label>
    <referenceTo>Service_Selection__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>