force-app/main/default/objects/Order_Item__c/fields/Session_Participation__c.field-meta.xml
<CustomField>
    <fullName>Session_Participation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Participation</label>
    <referenceTo>Session_Participation__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>