force-app/main/default/objects/Order_Item__c/fields/Total_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_amount__c</fullName>
    <formula>(Quantity__c *  Amount__c) + Discount_Amount__c</formula>
    <label>Total amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>