force-app/main/default/objects/Order_Item__c/validationRules/Empty_Product_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Empty_Product_Check</fullName>
    <active>false</active>
    <errorConditionFormula>Membership__c  = null  &amp;&amp;  Product__c  = null</errorConditionFormula>
    <errorMessage>Select at least one Product/Membership.</errorMessage>
</ValidationRule>