force-app/main/default/objects/Order_Item__c/validationRules/Product_Membership_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Membership_Check</fullName>
    <active>false</active>
    <errorConditionFormula>Membership__c &lt;&gt; null  &amp;&amp;  Product__c  &lt;&gt; null</errorConditionFormula>
    <errorMessage>Item can&apos;t be membership and product at the same time.</errorMessage>
</ValidationRule>