force-app/main/default/objects/Order_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Custom__c</columns>
    <columns>Total_amount__c</columns>
    <columns>Ticket__c</columns>
    <columns>Discount__c</columns>
    <columns>Name__c</columns>
    <columns>Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>